--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,16 @@
 {
   "singleQuote": true,
-  "printWidth": 600
+  "plugins": [
+    "prettier-plugin-go-template"
+  ],
+  "overrides": [
+    {
+      "files": [
+        "*.html"
+      ],
+      "options": {
+        "parser": "go-template"
+      }
+    }
+  ]
 }
